added delta merged addon

--- a/ref.cfg
+++ b/ref.cfg
@@ -1270,3 +1270,4 @@ content=OMWLLFMod.omwaddon
 content=Beautiful cities of morrowind.esp
 content=BCOM_pathgrid_reset.esp
 content=Interior exterior flag reset.ESP
+content=merged.omwaddon
